Document main.mastermind.c Move report

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -27,8 +27,8 @@
 stringstyle=\color{magenta}}
 
 \title{INFO0030: Titre du Projet}
-\author{Groupe XX: Prénom Nom, Prénom Nom}
-\date{}
+\author{Groupe 10: Thomas Fraiponts, Martin Schins}
+\date{16/04/2024}
 
 \maketitle
 
