--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -1,8 +1,11 @@
+% !TEX root = ./rapport.tex
+% !TEX engine = latexmk -pdf
+% !TEX buildOnSave = true
 \documentclass[a4paper, 11pt, oneside]{article}
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[francais]{babel}
+\usepackage[french]{babel}
 \usepackage{array}
 \usepackage{shortvrb}
 \usepackage{listings}
@@ -18,21 +21,79 @@
 \usepackage{eurosym}
 \usepackage{listings}
 \usepackage{color}
+\usepackage[table,xcdraw,dvipsnames]{xcolor}
+\usepackage[utf8]{inputenc}
+\usepackage{mdframed}
+\usepackage{tikz}
+\usepackage{float}
+\usepackage{hyperref}
 
-\definecolor{mymauve}{rgb}{0.58,0,0.82}
+\hypersetup{
+    colorlinks=true, % set to true to enable coloring of links
+    linkbordercolor=white, % set the border color of internal links to white
+    linkcolor=black % set the color of internal links to black
+}
+
+\renewcommand{\lstlistingname}{Extrait de Code}
+
+\definecolor{mygray}{rgb}{0.5,0.5,0.5}
+\newcommand{\coms}[1]{\textcolor{MidnightBlue}{#1}}
+
+\lstset{
+    language=C, % Utilisation du langage C
+    commentstyle={\color{MidnightBlue}}, % Couleur des commentaires
+    frame=single, % Entoure le code d'un joli cadre
+    rulecolor=\color{black}, % Couleur de la ligne qui forme le cadre
+    stringstyle=\color{RawSienna}, % Couleur des chaines de caractères
+    numbers=left, % Ajoute une numérotation des lignes à gauche
+    numbersep=5pt, % Distance entre les numérots de lignes et le code
+    numberstyle=\tiny\color{mygray}, % Couleur des numéros de lignes
+    basicstyle=\tt\footnotesize,
+    tabsize=3, % Largeur des tabulations par défaut
+    keywordstyle=\tt\bf\footnotesize\color{Sepia}, % Style des mots-clés
+    extendedchars=true,
+    captionpos=b, % sets the caption-position to bottom
+    texcl=true, % Commentaires sur une ligne interprétés en Latex
+    showstringspaces=false, % Ne montre pas les espace dans les chaines de caractères
+    escapeinside={(>}{<)}, % Permet de mettre du latex entre des <( et )>.
+    inputencoding=utf8,
+    literate=
+  {á}{{\'a}}1 {é}{{\'e}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1
+  {Á}{{\'A}}1 {É}{{\'E}}1 {Í}{{\'I}}1 {Ó}{{\'O}}1 {Ú}{{\'U}}1
+  {à}{{\`a}}1 {è}{{\`e}}1 {ì}{{\`i}}1 {ò}{{\`o}}1 {ù}{{\`u}}1
+  {À}{{\`A}}1 {È}{{\`E}}1 {Ì}{{\`I}}1 {Ò}{{\`O}}1 {Ù}{{\`U}}1
+  {ä}{{\"a}}1 {ë}{{\"e}}1 {ï}{{\"i}}1 {ö}{{\"o}}1 {ü}{{\"u}}1
+  {Ä}{{\"A}}1 {Ë}{{\"E}}1 {Ï}{{\"I}}1 {Ö}{{\"O}}1 {Ü}{{\"U}}1
+  {â}{{\^a}}1 {ê}{{\^e}}1 {î}{{\^i}}1 {ô}{{\^o}}1 {û}{{\^u}}1
+  {Â}{{\^A}}1 {Ê}{{\^E}}1 {Î}{{\^I}}1 {Ô}{{\^O}}1 {Û}{{\^U}}1
+  {œ}{{\oe}}1 {Œ}{{\OE}}1 {æ}{{\ae}}1 {Æ}{{\AE}}1 {ß}{{\ss}}1
+  {ű}{{\H{u}}}1 {Ű}{{\H{U}}}1 {ő}{{\H{o}}}1 {Ő}{{\H{O}}}1
+  {ç}{{\c c}}1 {Ç}{{\c C}}1 {ø}{{\o}}1 {å}{{\r a}}1 {Å}{{\r A}}1
+  {€}{{\euro}}1 {£}{{\pounds}}1 {«}{{\guillemotleft}}1
+  {»}{{\guillemotright}}1 {ñ}{{\~n}}1 {Ñ}{{\~N}}1 {¿}{{?`}}1
+}
 
 \begin{document}
 
 \lstset{language=C, commentstyle={\color{blue}}, frame=single,
 stringstyle=\color{magenta}}
 
-\title{INFO0030: Titre du Projet}
+\title{INFO0030: Projet 4, Mastermind}
 \author{Groupe 10: Thomas Fraiponts, Martin Schins}
-\date{16/04/2024}
+\date{Mai 2024}
 
 \maketitle
+\newpage
+\tableofcontents
+\newpage
 
-
-
+\input{introduction}
+\input{architecture_generale}
+\input{algoritmes_particuliers}
+\input{interface_graphique}
+\input{gestion_scm}
+\input{cooperation}
+\input{suggestion_ameliorations}
+\input{apprentissages}
 
 \end{document}
