--- a/rapport/introduction.tex
+++ b/rapport/introduction.tex
@@ -1,1 +1,4 @@
 % !TEX root = ./rapport.tex
+\section{Introduction}
+
+À travers ce rapport, nous allons explorer l'architecture générale de notre code, en mettant en évidence les principaux concepts et leur interaction. Nous examinerons aussi les structures de données que nous avons développées, en discutant de leur pertinence et de leur coût. De plus, nous détaillerons les algorithmes que nous avons conçus pour gérer certaines fonctionnalités du jeu. Enfin, nous aborderons l'interface graphique, la gestion du SCM, la coopération au sein du groupe, les améliorations possibles et les enseignements tirés de cette expérience.
