--- a/rapport/algoritmes_particuliers.tex
+++ b/rapport/algoritmes_particuliers.tex
@@ -1,3 +1,130 @@
 % !TEX root = ./rapport.tex
 
 \section{Algorithmes particuliers}
+
+Notre algorithme, $determine\_feedback\_proposition$, nous permet de déterminer le résultat d'une combinaison proposée durant la partie. D'abord, nous initialisons des compteurs pour suivre le nombre d'occurrences de chaque couleur dans la proposition du joueur et dans la solution secrète. Cela nous permet de comparer les deux ensembles de pions par la suite.
+\\\\
+Ensuite, nous parcourons chaque pion de la proposition et chaque pion de la solution. Si un pion de la proposition est à la même position qu'un pion correspondant dans la solution, nous incrémentons le nombre de pions corrects. Sinon, nous mettons à jour les compteurs de couleur correspondants pour les pions mal placés.
+\\\\
+Et une fois que tous les pions ont été évalués, nous comparons les compteurs de couleur de la proposition et de la solution pour déterminer le nombre de pions mal placés. De cette manière, les pions mal placés sont correctement comptés même s'ils apparaissent plusieurs fois dans la proposition ou la solution.
+
+\begin{lstlisting}[language=C]
+void determine_feedback_proposition(ModelMastermind *mm, Combination 
+*proposition, const PAWN_COLOR *solution) {
+   assert(mm != NULL && proposition != NULL && solution != NULL);
+
+   unsigned int nbColorsInProposition[NB_PAWN_COLORS];
+   unsigned int nbColorsInSolution[NB_PAWN_COLORS];
+
+   for(unsigned int i = 0; i < NB_PAWN_COLORS; i++){
+      nbColorsInProposition[i] = 0;
+      nbColorsInSolution[i] = 0;
+   }
+
+   for(unsigned int i = 0; i < mm->history->nbPawns; i++){
+      if(proposition->pawns[i] == solution[i])
+         proposition->nbCorrect++;
+       
+      else{
+         nbColorsInProposition[proposition->pawns[i]]++;
+         nbColorsInSolution[solution[i]]++;
+      }
+   }
+
+   for(unsigned int i = 0; i < NB_PAWN_COLORS; i++){
+      if(nbColorsInProposition[i] < nbColorsInSolution[i])
+         proposition->nbMisplaced += nbColorsInProposition[i];
+      else
+         proposition->nbMisplaced += nbColorsInSolution[i];
+   }
+}
+\end{lstlisting}
+
+Notre algorithme $load\_scores$ nous permet de charger les scores enregistrés à partir d'un fichier texte. D'abord, nous vérifions que le chemin du fichier est valide. Ensuite, nous allouons de la mémoire pour stocker les scores chargés à partir du fichier. Nous utilisons notre structure savedScores qui nous permet de stocker facilement chacun des scores. 
+\\\\
+Si le fichier existe et peut être ouvert en lecture, nous le parcourons pour récupérer le nombre total de scores enregistrés. Ensuite, nous allouons de la mémoire pour stocker chaque score individuel, en lisant le pseudo et le score à partir du fichier et en les enregistrant dans notre structure de données. En cas d'échec de l'une de ces étapes, nous libérons toute la mémoire allouée et renvoyons NULL pour indiquer une erreur.
+\\\\
+Pour l'algorithme $write\_scores$, nous vérifions que les scores et le chemin du fichier sont valides. Ensuite, nous ouvrons le fichier en mode écriture. Si l'ouverture du fichier réussit, nous écrivons d'abord le nombre total de scores dans le fichier. Ensuite, nous parcourons chaque score et écrivons le pseudo et le score dans le fichier, ligne par ligne. Une fois tous les scores écrits, nous fermons le fichier. En cas d'échec de l'écriture ou de l'ouverture du fichier, nous affichons un message d'erreur et renvoyons un code d'erreur approprié.
+\\\\
+En utilisant ces deux algorithmes, nous pouvons facilement charger et sauvegarder les scores du jeu dans un fichier externe, ce qui permet de conserver les scores entre les sessions de jeu et de les partager aux différents joueurs.
+
+\begin{lstlisting}[language=C]
+SavedScores *load_scores(const char *filePath) {
+   assert(filePath != NULL);
+
+   SavedScores *save = malloc(sizeof(SavedScores));
+   if(save == NULL)
+      return NULL;
+
+   if(access(filePath, F_OK) == 0){
+      FILE *pFile = fopen(filePath, "r");
+      if(pFile == NULL)
+         return NULL;
+
+      if(!fscanf(pFile, "%u\n", &save->length)){
+         free(save);
+         fclose(pFile);
+         return NULL;
+      }
+
+      save->savedScores = malloc(save->length * sizeof(Score *));
+      if(save->savedScores == NULL){
+         free(save);
+         fclose(pFile);
+         return NULL;
+      }
+
+      for(unsigned i = 0; save->length > i; i++){
+         save->savedScores[i] = malloc(sizeof(Score));
+         if(save->savedScores[i] == NULL){
+            for(unsigned j = 0; j < i; j++)
+               free(save->savedScores[j]);
+
+            free(save->savedScores);
+            free(save);
+            fclose(pFile);
+            return NULL;
+         }
+         if(!fscanf(pFile, "%s %u\n", save->savedScores[i]->pseudo,
+                    &save->savedScores[i]->score)){
+            for(unsigned j = 0; j < i; j++)
+               free(save->savedScores[j]);
+
+            free(save);
+            fclose(pFile);
+            return NULL;
+         }
+      }
+   } else{
+      save->length = 0;
+      save->savedScores = malloc(sizeof(Score *));
+      if(save->savedScores == NULL){
+         free(save);
+         return NULL;
+      }
+   }
+
+   return save;
+}
+
+
+int write_scores(SavedScores *scores, const char *filePath) {
+   assert(scores != NULL && filePath != NULL);
+
+   FILE *pFile = fopen(filePath, "w");
+   if(pFile == NULL){
+      fprintf(stderr, "Error while saving score");
+      return -1;
+   }
+
+   fprintf(pFile, "%u\n", scores->length);
+
+   for(unsigned i = 0; i < scores->length; i++){
+      fprintf(pFile, "%s %u\n", scores->savedScores[i]->pseudo,
+              scores->savedScores[i]->score);
+   }
+
+   fclose(pFile);
+   return 0;
+}
+\end{lstlisting}
