Change rapport.tex inputs to add extensions for other tex files

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -19,10 +19,8 @@
 \usepackage{url}
 \usepackage{indentfirst}
 \usepackage{eurosym}
-\usepackage{listings}
 \usepackage{color}
 \usepackage[table,xcdraw,dvipsnames]{xcolor}
-\usepackage[utf8]{inputenc}
 \usepackage{mdframed}
 \usepackage{tikz}
 \usepackage{float}
@@ -85,13 +83,13 @@ stringstyle=\color{magenta}}
 \maketitle
 \newpage
 
-\input{introduction}
-\input{architecture_generale}
-\input{algoritmes_particuliers}
-\input{interface_graphique}
-\input{gestion_scm}
-\input{cooperation}
-\input{suggestion_ameliorations}
-\input{apprentissages}
+\input{introduction.tex}
+\input{architecture_generale.tex}
+\input{algoritmes_particuliers.tex}
+\input{interface_graphique.tex}
+\input{gestion_scm.tex}
+\input{cooperation.tex}
+\input{suggestion_ameliorations.tex}
+\input{apprentissages.tex}
 
 \end{document}
